{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 841,
  "lineage": "0d97e0b6-d741-5854-055a-fdb4daaf3039",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0869c9b3dd07bb538",
            "association_id": "eipassoc-09ec966e61ff096db",
            "domain": "vpc",
            "id": "eipalloc-0869c9b3dd07bb538",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-0504ece72c8d49c6c",
            "private_dns": "ip-10-10-1-226.eu-central-1.compute.internal",
            "private_ip": "10.10.1.226",
            "public_dns": "ec2-52-57-85-177.eu-central-1.compute.amazonaws.com",
            "public_ip": "52.57.85.177",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "Test",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jump-host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d497a49e7d359666",
            "arn": "arn:aws:ec2:eu-central-1:111102845449:instance/i-014b7a93b4bc00e98",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-014b7a93b4bc00e98",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ct-k3s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0781eefa4be811e0d",
            "private_dns": "ip-10-10-3-109.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.3.109",
            "public_dns": "ec2-3-126-255-249.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.126.255.249",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a966fc3e929ae3cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028fedef7dfaa3011",
            "tags": {
              "Name": "jump-host"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "jump-host",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e509b22888d841"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_from_everywhere",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.all-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k3s-nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d497a49e7d359666",
            "arn": "arn:aws:ec2:eu-central-1:111102845449:instance/i-07ac76539bd9d854c",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ac76539bd9d854c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ct-k3s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-026d222e6da370f3e",
            "private_dns": "ip-10-10-11-61.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.11.61",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d421fb9cccd24c5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fc8064c042f519a1",
            "tags": {
              "Name": "k3s-node-0"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "k3s-node-0",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e509b22888d841"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_from_everywhere",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.all-private-subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d497a49e7d359666",
            "arn": "arn:aws:ec2:eu-central-1:111102845449:instance/i-0b6514c557091a247",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6514c557091a247",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ct-k3s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c7ebf17e3c2906ad",
            "private_dns": "ip-10-10-12-116.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.12.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a61d6757179b0235",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ef4db590dd022bcb",
            "tags": {
              "Name": "k3s-node-1"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "k3s-node-1",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e509b22888d841"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_from_everywhere",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.all-private-subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d497a49e7d359666",
            "arn": "arn:aws:ec2:eu-central-1:111102845449:instance/i-0a32b0175b6a8ef31",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a32b0175b6a8ef31",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "ct-k3s",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01806a26d47921f9e",
            "private_dns": "ip-10-10-13-224.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.13.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01e20ac6c4b949ef2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae20297618ac0465",
            "tags": {
              "Name": "k3s-node-2"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "k3s-node-2",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c5e509b22888d841"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_ssh_from_everywhere",
            "aws_vpc.vpc",
            "data.aws_ami.ubuntu",
            "data.aws_subnets.all-private-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:internet-gateway/igw-0e5dd0a3985116212",
            "id": "igw-0e5dd0a3985116212",
            "owner_id": "111102845449",
            "tags": {
              "Name": "igw-k3s"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "igw-k3s",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "k3s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:loadbalancer/net/alb-k3s/ae322a807f0eb0d5",
            "arn_suffix": "net/alb-k3s/ae322a807f0eb0d5",
            "dns_name": "alb-k3s-ae322a807f0eb0d5.elb.eu-central-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:loadbalancer/net/alb-k3s/ae322a807f0eb0d5",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "alb-k3s",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028fedef7dfaa3011"
              },
              {
                "subnet_id": "subnet-054b7b97a8fa24ebf"
              },
              {
                "subnet_id": "subnet-0e82a9f82ee0aba6c"
              }
            ],
            "subnets": [
              "subnet-028fedef7dfaa3011",
              "subnet-054b7b97a8fa24ebf",
              "subnet-0e82a9f82ee0aba6c"
            ],
            "tags": {
              "Name": "alb-k3s"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "alb-k3s",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53",
            "zone_id": "Z3F0SRJ5LGBH90"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_subnets.all-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "k3s-nodes-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:listener/net/alb-k3s/ae322a807f0eb0d5/978040c6b405be8d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:listener/net/alb-k3s/ae322a807f0eb0d5/978040c6b405be8d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:loadbalancer/net/alb-k3s/ae322a807f0eb0d5",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "Test",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.k3s",
            "aws_lb_target_group.k3s-nodes-ssh",
            "aws_vpc.vpc",
            "data.aws_subnets.all-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "k3s-nodes-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "arn_suffix": "targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "lambda_multi_value_headers_enabled": false,
            "name": "k3s-nodes-ssh",
            "port": 22,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "k3s-nodes-ssh"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "k3s-nodes-ssh",
              "Terraform": "true"
            },
            "target_type": "instance",
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "k3s-nodes-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf-20230421075733376600000003",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "target_id": "i-0b6514c557091a247"
          },
          "dependencies": [
            "aws_lb_target_group.k3s-nodes-ssh",
            "data.aws_instances.k3s-nodes"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf-20230421075733062700000001",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "target_id": "i-07ac76539bd9d854c"
          },
          "dependencies": [
            "aws_lb_target_group.k3s-nodes-ssh",
            "data.aws_instances.k3s-nodes"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf-20230421075733169800000002",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:111102845449:targetgroup/k3s-nodes-ssh/ba8bbf1948874bcf",
            "target_id": "i-0a32b0175b6a8ef31"
          },
          "dependencies": [
            "aws_lb_target_group.k3s-nodes-ssh",
            "data.aws_instances.k3s-nodes"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0869c9b3dd07bb538",
            "connectivity_type": "public",
            "id": "nat-0e246d7d253a40e6b",
            "network_interface_id": "eni-0504ece72c8d49c6c",
            "private_ip": "10.10.1.226",
            "public_ip": "52.57.85.177",
            "subnet_id": "subnet-054b7b97a8fa24ebf",
            "tags": {
              "Name": "ngw-public-1a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "ngw-public-1a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "aws_eip.eip-public-1a",
            "aws_internet_gateway.igw-k3s",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e5dd0a3985116212",
            "id": "r-rtb-06f0aff675277b6601080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f0aff675277b660",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-k3s",
            "aws_route_table.rt-public",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-092c82ce7e8e840e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e246d7d253a40e6b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-092c82ce7e8e840e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-public-1a",
            "aws_internet_gateway.igw-k3s",
            "aws_nat_gateway.ngw-public-1a",
            "aws_route_table.rt-private",
            "aws_subnet.public-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:route-table/rtb-092c82ce7e8e840e8",
            "id": "rtb-092c82ce7e8e840e8",
            "owner_id": "111102845449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e246d7d253a40e6b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "rt-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:route-table/rtb-06f0aff675277b660",
            "id": "rtb-06f0aff675277b660",
            "owner_id": "111102845449",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5dd0a3985116212",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "rt-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040ae4f8ade6ef760",
            "route_table_id": "rtb-092c82ce7e8e840e8",
            "subnet_id": "subnet-0fc8064c042f519a1"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_vpc.vpc",
            "data.aws_subnets.all-private-subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dc91f2f4156a1666",
            "route_table_id": "rtb-092c82ce7e8e840e8",
            "subnet_id": "subnet-0ef4db590dd022bcb"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_vpc.vpc",
            "data.aws_subnets.all-private-subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045ceea972eb782da",
            "route_table_id": "rtb-092c82ce7e8e840e8",
            "subnet_id": "subnet-0ae20297618ac0465"
          },
          "dependencies": [
            "aws_route_table.rt-private",
            "aws_vpc.vpc",
            "data.aws_subnets.all-private-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f8039ecd0757f06",
            "route_table_id": "rtb-06f0aff675277b660",
            "subnet_id": "subnet-028fedef7dfaa3011"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_vpc.vpc",
            "data.aws_subnets.all-public-subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c98e33da13118f1c",
            "route_table_id": "rtb-06f0aff675277b660",
            "subnet_id": "subnet-0e82a9f82ee0aba6c"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_vpc.vpc",
            "data.aws_subnets.all-public-subnets"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055121992954b0c68",
            "route_table_id": "rtb-06f0aff675277b660",
            "subnet_id": "subnet-054b7b97a8fa24ebf"
          },
          "dependencies": [
            "aws_route_table.rt-public",
            "aws_vpc.vpc",
            "data.aws_subnets.all-public-subnets"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:security-group/sg-093246f22d9141b41",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093246f22d9141b41",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "111102845449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "allow_ssh",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh_from_everywhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:security-group/sg-0c5e509b22888d841",
            "description": "Allow ssh inbound traffic from everywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5e509b22888d841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_from_everywhere",
            "name_prefix": "",
            "owner_id": "111102845449",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_from_everywhere"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "allow_ssh_from_everywhere",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-0fc8064c042f519a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc8064c042f519a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-0ef4db590dd022bcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef4db590dd022bcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1b"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-0ae20297618ac0465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.13.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae20297618ac0465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-1c"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "private-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-054b7b97a8fa24ebf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054b7b97a8fa24ebf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1a"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "public-1a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-0e82a9f82ee0aba6c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e82a9f82ee0aba6c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1b"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "public-1b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:subnet/subnet-028fedef7dfaa3011",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028fedef7dfaa3011",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "111102845449",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-1c"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "public-1c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-076eb553b8f813a53"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:111102845449:vpc/vpc-076eb553b8f813a53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0cd4d7df1bfadcaed",
            "default_route_table_id": "rtb-02713f96ec9f98ef0",
            "default_security_group_id": "sg-0b03952fd8f5ce362",
            "dhcp_options_id": "dopt-abba5ac3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-076eb553b8f813a53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02713f96ec9f98ef0",
            "owner_id": "111102845449",
            "tags": {
              "Name": "k3s"
            },
            "tags_all": {
              "Environment": "Test",
              "Name": "k3s",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}